Update contact service
